Changed h1 font size

--- a/sunset-courier-services/src/app/image-carousel/image-carousel.component.css
+++ b/sunset-courier-services/src/app/image-carousel/image-carousel.component.css
@@ -2,6 +2,11 @@
     color:#ffffff!important;
 }
 
+h1 {
+    font-size: 28px!important;
+    padding: 10px 75px;
+}
+
 
 @media(max-width: 959px)
 {
