--- a/sunset-courier-services/src/app/home/home.component.html
+++ b/sunset-courier-services/src/app/home/home.component.html
@@ -18,12 +18,7 @@
       Aliquam mauris quam, interdum vitae augue vel, accumsan laoreet erat.
       Nullam sit amet est odio. Morbi nec risus in est accumsan egestas at ac
       velit. Vestibulum non ultrices turpis. </p> 
-      
-      <p>In sed turpis ac eros rutrum
-      scelerisque. Donec viverra pellentesque tellus et vestibulum. Nulla
-      scelerisque facilisis risus, id dapibus ante consequat sed. Ut quis tortor
-      at ipsum ultrices sagittis. Quisque nunc nibh, posuere ac turpis ac,
-      efficitur egestas ipsum. </p>
+    
      
     </div>
     <div><app-quotation></app-quotation></div>
@@ -57,11 +52,11 @@
           <mat-card-content>
               <ul>
                   <li>
-                      <i class="fas fa-check-circle"></i>
+                      <i class="fas fa-caret-right"></i>
                       Up to £10,000 Goods In Transit
                   </li>
                   <li>
-                      <i class="fas fa-check-circle"></i>
+                      <i class="fas fa-caret-right"></i>
                       Small vans to XLWB vans, all goods and vehicles are fully insured 
                   </li>
                 
@@ -76,10 +71,10 @@
               <mat-card-content>
                 <ul>
                   <li>
-                      <i class="fas fa-check-circle"></i>Free no obligation quotes
+                      <i class="fas fa-caret-right"></i>Free no obligation quotes
                   </li>
                   <li>
-                  <i class="fas fa-check-circle"></i>Friendly, reliable staff
+                  <i class="fas fa-caret-right"></i>Friendly, reliable staff
               </li>
               </ul>
                 </mat-card-content>
@@ -92,9 +87,9 @@
         <mat-card-content>
           <ul>
             <li>
-                <i class="fas fa-check-circle"></i>Open 24 hours a day, 7 days a week
+                <i class="fas fa-caret-right"></i>Open 24 hours a day, 7 days a week
             </li>
-            <li><i class="fas fa-check-circle"></i>We collect and deliver all across the UK</li>
+            <li><i class="fas fa-caret-right"></i>We collect and deliver all across the UK</li>
           </ul>
           </mat-card-content>
     </mat-card>
