--- a/sunset-courier-services/src/app/menu/menu.component.html
+++ b/sunset-courier-services/src/app/menu/menu.component.html
@@ -26,7 +26,7 @@
       </button>
   </div> -->
   <div class="logoImage">
-      <a routerLink="/home"><img src="../../assets/images/logo/logo.png"> </a>
+      <a routerLink="/"><img src="../../assets/images/logo/logo.png"> </a>
   </div>
   <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
       <ul fxLayout fxLayoutGap="30px" class="navigation-items">
