--- a/sunset-courier-services/src/app/image-carousel/image-carousel.component.html
+++ b/sunset-courier-services/src/app/image-carousel/image-carousel.component.html
@@ -18,7 +18,7 @@
     [image]="slide"
     [hideOverlay]="false"  >
   <div style="width: 100%; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center; color: #ffffff!important;">
-      <h1 style="color: #ffffff;">Nationwide deliveries and collection | We collect and deliver all across the UK.</h1>
+      <h1 style="color: #ffffff;">Nationwide deliveries and collection | We collect and deliver all across the UK</h1>
 </div>
 </mat-carousel-slide>
 </mat-carousel>
