--- a/sunset-courier-services/src/app/menu/menu.component.css
+++ b/sunset-courier-services/src/app/menu/menu.component.css
@@ -1,6 +1,6 @@
 button {
   border-radius: 0px !important;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   font-weight: 100;
   background-color: transparent;
   color: #ffffff;
@@ -44,7 +44,7 @@ img {
   /* left: 0px;
   position: absolute;
   display: inline-block; */
-  height: 105px;
+  height: 90px;
   top: 10px;
 }
 /* 
