--- a/sunset-courier-services/src/styles.css
+++ b/sunset-courier-services/src/styles.css
@@ -37,7 +37,7 @@ button {
 }
 
 .mat-card-header-text {
-  margin: 0;
+  margin: 0px auto 0!important;
 }
 
 .mat-button.mat-accent,
@@ -68,7 +68,13 @@ mat-toolbar {
     font-size: 24px !important;
     padding-bottom: 20px !important;
     font-family: Cinzel!important;
-}
+  }
 
+  .mat-card-header-text {
+    margin: 5px auto 0!important;
+  }
 
+  li.carousel-slide {
+    padding-bottom: 40%!important;
+  }
 }
