--- a/sunset-courier-services/src/app/image-carousel/image-carousel.component.html
+++ b/sunset-courier-services/src/app/image-carousel/image-carousel.component.html
@@ -16,9 +16,23 @@
     #matCarouselSlide
     *ngFor="let slide of slides; let i = index"
     [image]="slide"
-    [hideOverlay]="false"  >
+    [hideOverlay]="false">
   <div style="width: 100%; height: 100%; display: flex; flex-direction: column; align-items: center; justify-content: center; color: #ffffff!important;">
-      <h1 style="color: #ffffff;">Nationwide deliveries and collection | We collect and deliver all across the UK</h1>
+     
+    <div >
+    <h1 style="color: #ffffff;" *ngIf="i == 0">
+      Nationwide deliveries and collection | We collect and deliver all across the UK
+    </h1>
+    <h1 style="color: #ffffff;" *ngIf="i == 1">
+      Free no obligation quotes | Get a quote online today
+    </h1>
+    <h1 style="color: #ffffff;" *ngIf="i == 2">
+      We're always open | Open 24 hours a day, 7 days a week
+    </h1>
+    <h1 style="color: #ffffff;" *ngIf="i == 3">
+      Quality vehicles | Small Vans to XLWB Vans, all goods are fully insured
+    </h1>
+    </div>
 </div>
 </mat-carousel-slide>
 </mat-carousel>
