--- a/sunset-courier-services/src/app/home/home.component.html
+++ b/sunset-courier-services/src/app/home/home.component.html
@@ -32,20 +32,15 @@
 
     <div>
       <p>
-        Our modern fleet of vans includes long wheel base and extra long wheel
-        base, enabling us to move almost anything.
+        Our modern fleet of vans includes lwb/xlwb wheel base, enabling us to move almost anything. (Storage area of 4.3L x 1.3W x 1.8H carrying upto 1150 kgs and up to 4 pallets)
       </p>
       <p>
-        Our drivers are always happy to help load and unload, but now and again
-        an extra pair of hands is required we can provide you with a helper.
+        With insurance for goods in transit to a value of £10,000, you can be sure that your delivery is safe.
       </p>
       <p>
-        With insurance for goods in transit to a value of £10,000, you can be
-        sure that your delivery is safe. And to keep your costs as low as
-        possible, for non-urgent deliveries we offer an end-of-day delivery
-        service for London postcodes.
+        Other services provided, house removal, man with van.
       </p>
-      <p>Other services provided, house removal, man with van.</p>
+      <p>Our drivers are always happy to help load and unload, but now and again when an extra pair of hands is required, we can provide you with a helper.</p>
     </div>
     <div class="container">
       <mat-card>
