--- a/sunset-courier-services/src/app/contact/contact.component.html
+++ b/sunset-courier-services/src/app/contact/contact.component.html
@@ -2,7 +2,7 @@
 <div class="contact">
     <div class="container">
        <div>
-        <i class="fas fa-phone-alt"></i> <a  href="tel: 07458 302808"> 
+        <i class="fas fa-phone-alt phone"></i> <a  href="tel: 07458 302808"> 
             07458 302808 
         </a>
        </div>
