--- a/sunset-courier-services/src/app/home/home.component.html
+++ b/sunset-courier-services/src/app/home/home.component.html
@@ -5,31 +5,19 @@
 <div id="quotes" class="quotes">
   <!-- class="item" style="margin-right: 1%;" -->
   <div>
-    <h1>Driven to deliver</h1>
-    <div class="quote-container">
-    <div><p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum
-      arcu ac felis tristique condimentum. Nam lobortis quis quam a tincidunt.
-      Vivamus tristique posuere mi, id scelerisque tortor tempor non.</p>
-      
-      <p>Praesent
-      scelerisque tortor eget nunc fringilla, sed bibendum risus molestie.
-      Aliquam mauris quam, interdum vitae augue vel, accumsan laoreet erat.
-      Nullam sit amet est odio. Morbi nec risus in est accumsan egestas at ac
-      velit. Vestibulum non ultrices turpis. </p> 
-    
-    </div>
-    <div><app-quotation></app-quotation></div>
+      <h1>Driven to deliver</h1>
+      <div class="quote-container">
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla vestibulum
+          arcu ac felis tristique condimentum. Nam lobortis quis quam a tincidunt.
+          Vivamus tristique posuere mi, id scelerisque tortor tempor non.</p>
+         <button mat-button class="quote-button-small" (click)="goToQuotes()">Get a Quote</button>
+      </div>
   </div>
-  </div>
-  <!-- <div class="item" style="margin-left: 1%; background-color: transparent!important"> 
-        <div class="header-image"></div>
-     </div> -->
 </div>
 <div id="serviceInfo" class="services">
   <div>
     <h1>Services</h1>
-
     <div>
       <p>
         Our modern fleet of vans includes lwb/xlwb wheel base, enabling us to move almost anything. (Storage area of 4.3L x 1.3W x 1.8H carrying upto 1150 kgs and up to 4 pallets)
