--- a/sunset-courier-services/src/app/mobile-menu/mobile-menu.component.html
+++ b/sunset-courier-services/src/app/mobile-menu/mobile-menu.component.html
@@ -15,4 +15,8 @@
         <!-- <mat-icon>account_balance</mat-icon> -->
         <span class="nav-caption">Contact</span>
     </a>
+    <a mat-list-item routerLink="/faqs" (click)="onSidenavClose()">
+        <!-- <mat-icon>account_balance</mat-icon> -->
+        <span class="nav-caption">Frequently Asked Questions</span>
+    </a>
   </mat-nav-list>
