--- a/sunset-courier-services/src/app/services/services.component.css
+++ b/sunset-courier-services/src/app/services/services.component.css
@@ -4,21 +4,70 @@
     padding:8rem 0 5rem;
 }
 
-.container {
+
+
+img {width: 100%;}
+
+/* .services-header-overlay {
+        position: fixed; /* Sit on top of the page content */
+       /*  width: 100%; Full width (cover the whole page) */
+       /* background-color: rgba(0,0,0,0.5);  Black background with opacity */
+       /* z-index: 2;  Specify a stack order in case you're using a different order for other elements */
+    
+    /* height:500px; */
+    /* background: linear-gradient(180deg, rgba(0,0,0,0.8) 20%, rgba(255,255,255,0.2) 100%); */
+    /* z-index: 10;
+    position: relative; */
+/* }  */
+
+.services-header {
+    background: url("/assets/images/van-dimensions.jpeg") no-repeat;
+    background-size: cover;
+    height:500px;
+    z-index: -1;
+    /* position: absolute; */
+}
+
+.main-container {
     display:flex;
     flex-direction: row;
+    padding:0; 
+    flex-wrap: wrap;
+}
+
+.container {
+    display:flex;
+    flex-direction: column;
     padding:25px 0; 
+    flex-wrap: wrap;
+    flex-grow: 1;
 }
 
 mat-card {
-    width:100%;
+    width:570px;
     margin: 10px 20px 10px 0px;
+    border-radius:0!important;
+    box-shadow: none!important;
+}
+
+.mat-card:not([class*=mat-elevation-z]){
+    box-shadow: none!important;
 }
 
 mat-card-title {
     font-size: 18px;
     font-weight: 500;
     color: #222222;
+    padding-bottom: 5px;
+  
+}
+
+hr {
+    background-color: #f04b23;
+    height: 1px;
+    border: none;
+    float: left;
+    width:50%
 }
 
 mat-card-content {
@@ -30,13 +79,19 @@ mat-card p {
     font-weight: 500;
 }
 
+
+.mat-card-header-text {
+    margin: 0px auto 0!important;
+  }
+  
+
 p {
     font-size: 16px;
 }
 
 ul {
     list-style-type: none;
-    padding-left: 5px;
+    padding-left: 0px;
 }
 
 ul li i {
@@ -46,5 +101,5 @@ ul li i {
 }
 
 ul li {
-    padding: 5px 10px 15px;
+    padding: 5px 0px 15px;
 }
