--- a/sunset-courier-services/src/app/services/services.component.html
+++ b/sunset-courier-services/src/app/services/services.component.html
@@ -1,5 +1,77 @@
+<!-- <div class="services-header-overlay">  
+    <div class="services-header">
+       
+    </div>
+</div> -->
+
 <div class="services">
-    <h1>Our Services</h1>
+    <div>
+      <h1>Services</h1>
+      <div class="main-container">
+      <div class="container">
+
+        <mat-card>
+            <mat-card-header>
+                <mat-card-title>Free no obligation quotes<hr /></mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+              <ul>
+                <li>
+                  We offer a free no obligation quote. Get in touch today. 
+                </li>
+            </ul>
+              </mat-card-content>
+        </mat-card>
+
+        <mat-card>
+        <mat-card-header>
+          <mat-card-title>Nationwide deliveries and collection<hr /></mat-card-title>
+        </mat-card-header>
+        <mat-card-content>
+          <ul>
+            <li>
+                We're open 24 hours a day, 7 days a week and we collect and deliver all across the UK.</li>
+          </ul>
+        </mat-card-content>
+        </mat-card>
+        <mat-card>
+            <mat-card-header>
+                <mat-card-title>Fully insured<hr /></mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+                <ul>
+                    <li>
+                        With insurance for goods in transit to a value of £10,000, you can be sure that your delivery is safe. Our drivers are always happy to help load and unload, but now and again when an extra pair of hands are required, we can provide you with a helper.
+                    </li>
+                  
+                </ul>
+            </mat-card-content>
+        </mat-card>
+      </div>
+      <div class="container">
+        <mat-card>
+            <mat-card-header>
+                <mat-card-title>Quality vehicles<hr />
+                </mat-card-title>
+            </mat-card-header>
+            <mat-card-content>
+                <ul>
+                    <li>
+                        Our modern fleet of vans include a lwb/xlwb wheel base, enabling us to move almost anything. The vans provide a storage area of 4.3L x 1.3W x 1.8H allowing us to carry upto 1150kg and approximately 4 pallets.
+                        <img src="../../assets/images/van-dimensions.jpeg" alt="">
+                    </li>
+                </ul>
+            </mat-card-content>
+        </mat-card>
+      </div>
+    </div>
+      <!-- <a class="button" mat-flat-button (click)="goToServices()">Find out more</a> -->
+    </div>
+  </div>
+
+
+<!-- <div class="services">
+  <h1>Our Services</h1>
     <div>
         <p>
             Our modern fleet of vans includes long wheel base and extra long wheel base, enabling us to move almost anything.
@@ -49,6 +121,6 @@
     </mat-card>
 
     </div>
-</div>
+</div> -->
 
 
