--- a/sunset-courier-services/src/styles.css
+++ b/sunset-courier-services/src/styles.css
@@ -7,7 +7,7 @@ html,
 body {
   height: 100%;
   scroll-behavior: smooth;
-  font-family: Roboto;
+  font-family: 'Roboto'!important;
 }
 
 body {
@@ -18,6 +18,10 @@ body {
 section {
   padding: 30px 60px;
   background-color: #ffffff;
+}
+
+.mat-drawer-container{
+  background-color: #ffffff!important;
 }
 
 section:nth-of-type(even) {
@@ -36,10 +40,7 @@ h1 {
 button {
   border-radius: 2px !important;
   min-width: 100px;
-}
-
-.mat-card-header-text {
-  margin: 0px auto 0!important;
+ 
 }
 
 .mat-button.mat-accent,
