Upgrading angular cli

--- a/sunset-courier-services/src/app/app.component.html
+++ b/sunset-courier-services/src/app/app.component.html
@@ -8,6 +8,7 @@
 </router-outlet>
 <app-footer></app-footer> -->
 <!-- <app-layout> -->
+  <nb-layout>
 <mat-sidenav-container>
   <mat-sidenav #sidenav role="navigation">
     <app-mobile-menu (sidenavClose)="sidenav.close()"></app-mobile-menu>
@@ -35,3 +36,4 @@
   </mat-sidenav-content>
 </mat-sidenav-container>
 <!-- </app-layout> -->
+</nb-layout>
