--- a/sunset-courier-services/src/app/home/home.component.html
+++ b/sunset-courier-services/src/app/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="carousel">
+<!-- <div class="carousel">
   <app-image-carousel></app-image-carousel>
-</div>
+</div> -->
 
 <div id="quotes" class="quotes">
   <!-- class="item" style="margin-right: 1%;" -->
