--- a/sunset-courier-services/src/app/menu/menu.component.html
+++ b/sunset-courier-services/src/app/menu/menu.component.html
@@ -25,7 +25,7 @@
       </a>
       </li>
       <li>
-        <button class="quote-button" [ngxScrollTo]="'#quotes'">Get a Quote</button>
+        <button class="quote-button" (click)="goToQuote()">Get a Quote</button>
       </li>
     </ul>
 </div>
